Solucionando errores finales